--- a/admin.html
+++ b/admin.html
@@ -57,3 +57,18 @@
             <button type="submit">Add Fleet</button>
             </form>
     </aside>
+    <main>
+        <h3>Fleet List</h3>
+        <table id="fleetTable">
+            <thead>
+                <tr>
+                    <th>Reg of Vehicle</th>
+                    <th>Category</th>
+                    <th>Driver Name</th>
+                    <th>is available</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        
